--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,6 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    timeout-minutes: 30  # Set explicit timeout
     
     steps:
       - name: Checkout Code
@@ -26,7 +25,7 @@ jobs:
       - name: Install Dependencies
         run: |
           cd app
-          npm ci  # Use ci instead of install for faster, more reliable builds
+          npm install
 
       - name: Create Artifact Zip
         run: |
@@ -49,6 +48,3 @@ jobs:
           aws autoscaling start-instance-refresh \
             --auto-scaling-group-name Teamfolio-ASG \
             --preferences '{"InstanceWarmup": 300, "MinHealthyPercentage": 50}'
-
-      - name: Wait for ASG Refresh
-        run: sleep 310
